# Steering-Behavior

./: .gitignore  CMakeLists.txt
include/: Agent.hpp  Boid.hpp
src/: Agent.cpp  Boid.cpp  main.cpp
